--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "@hookform/resolvers": "^5.1.1",
     "@tailwindcss/vite": "^4.1.10",
     "axios": "^1.9.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.515.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.57.0",
