--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.57.0",
     "react-hot-toast": "^2.5.2",
+    "react-paginate": "^8.3.0",
     "react-router-dom": "^7.6.2",
     "tailwindcss": "^4.1.10",
     "zod": "^3.25.64",
