--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -1,13 +1,17 @@
-# Stage 1 - Build
-FROM node:18 AS builder
+# Use Node.js 20
+FROM node:20-alpine
+
 WORKDIR /app
-COPY . .
+
+COPY package*.json ./
 RUN npm install
+
+COPY . .
+
 RUN npm run build
 
-# Stage 2 - Serve with nginx
+# Serve with nginx (optional)
 FROM nginx:alpine
-COPY --from=builder /app/dist /usr/share/nginx/html
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY --from=0 /app/dist /usr/share/nginx/html
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
