--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -1,21 +1,13 @@
-# Use Node base image
-FROM node:20-alpine
-
-# Set working directory
+# Stage 1: Build
+FROM node:20-alpine as builder
 WORKDIR /app
-
-# Copy package files and install dependencies
 COPY package*.json ./
-RUN npm install
-
-# Copy the rest of the application code
+RUN npm ci
 COPY . .
-
-# Build the frontend (after code is present)
 RUN npm run build
 
-# Expose the port Vite uses (if serving locally, usually 5173 or 4173)
-EXPOSE 5173
-
-# Start the app (ensure npm start serves the built app)
-CMD ["npm", "start"]
+# Stage 2: Production
+FROM nginx:alpine
+COPY --from=builder /app/dist /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+EXPOSE 80
